[Fix]: Prevent the overflow

--- a/Chat App (With Rooms)/public/css/style.css
+++ b/Chat App (With Rooms)/public/css/style.css
@@ -106,6 +106,7 @@ body {
     box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
     height: 85vh;
     margin-top: 15px;
+    overflow-y: scroll;
 }
 .global .sidebar h2 {
     margin-left: 10px;
